# cosas

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md  build.sh  clean.sh  compile.sh  console.cpp  console.h  constants.h  control.cpp  control.h  engine-test.cpp-hidden  engine.cpp  engine.h  hello-world.cpp  install.sh  lookup.cpp  lookup.h  main.cpp  maths.cpp  maths.h  model.cpp  model.h  modulators.cpp  modulators.h  node.cpp  node.h  oscillator.cpp  oscillator.h  pane.cpp  pane.h  params.cpp  params.h  ratio-test.cpp-hidden  source.cpp  source.h  test.sh  todo.txt  (+8 more)
apps/amd64/dump/: console.h
apps/diag/: diag.cpp
apps/dnl/: dnl.cpp
apps/dump/: CMakeLists.txt  console.cpp  console.h  main.cpp
apps/fifo/: CMakeLists.txt  fifo.cpp
apps/fome/: CMakeLists.txt  fome.cpp
apps/hola/: CMakeLists.txt
apps/knob/: CMakeLists.txt  README.md  knob.cpp
apps/pico/diag/: diag.cpp
apps/pico/dnl/: match.txt
apps/pico/fifo/: CMakeLists.txt
apps/pico/fome/: CMakeLists.txt  fome.cpp
apps/pico/hola/: README.md  hello-world.cpp
apps/pico/knob/: knob.cpp
arduino/test/: test.ino
arduino/test2/: test2.ino
arduino/test3/: test3.ino
arduino/test4/: test4.ino
arduino/test5/: test5.ino
arduino/test6/: test6.ino
arduino/voice-editor/: voice-editor.ino
arduino/xqria/: README.md  sampling-old.md  sampling.md  xqria.ino
components/: README.md  xqrias
cosas/: README.md  console.cpp  console.h  constants.h  control.h  maths.cpp  node.h  transformers.h  wavetable.cpp
cosas/include/cosas/: app.h  app_dummy.h  app_fm.h  app_fome.h  buffer.h  common.h  constants.h  control.h  ctrl.h  debug.h  dnl.h  engine.h  engine_base.h  engine_old.h  engine_small.h  filter.h  knobs.h  leds_buffer.h  leds_mask.h  maths.h  modulators.h  node.h  oscillator.h  oscillator_new.h  oscillator_old.h  pane.h  params.h  patomic.h  queue.h  random.h  source.h  transformers.h  ui.h  wavelib.h  wavetable.h  weas.h
cosas/src/: CMakeLists.txt  app.cpp  app_dummy.cpp  app_fome.cpp  buffer.cpp  ctrl.cpp  debug.cpp  dnl.cpp  engine.cpp  engine_base.cpp  engine_old.cpp  engine_small.cpp  filter.cpp  knobs.cpp  leds_buffer.cpp  leds_mask.cpp  maths.cpp  modulators.cpp  node.cpp  old_engine.cpp  oscillator.cpp  oscillator_new.cpp  oscillator_old.cpp  pane.cpp  params.cpp  random.cpp  source.cpp  transformers.cpp  wavelib.cpp  wavetable.cpp
cosas/test/: CMakeLists.txt  app_fome.cpp  control.cpp  ctrl.cpp  engine.cpp  engine_old.cpp  filter.cpp  leds_buffer.cpp  leds_mask.cpp  main.cpp  maths.cpp  old_engine.cpp  oscillator.cpp  oscillator_old.cpp  random.cpp  transformers.cpp  wavelib.cpp  wavetable.cpp
dump/: CMakeLists.txt  README.md  console.cpp  main.cpp
holawea/: CMakeLists.txt  README.md  hello-world.cpp
include/cosas/: console.h  control.h  engine.h  maths.h  modulators.h  node.h  oscillator.h  pane.h  source.h  transformers.h  wavelib.h  wavetable.h
luzwea/: CMakeLists.txt  README.md  luzwea.cpp
py/: dnl.py  dnl.txt  dnl2.txt  dnl3.txt
src/: CMakeLists.txt  console.cpp  control.cpp  engine.cpp  main.cpp  maths.cpp  modulators.cpp  node.cpp  oscillator.cpp  pane.cpp  source.cpp  transformers.cpp  wavelib.cpp  wavetable.cpp
test/: CMakeLists.txt  control.cpp  engine.cpp  maths.cpp  oscillator.cpp  transformers.cpp  wavelib.cpp  wavetable.cpp
tests/diag/: CMakeLists.txt  README.md  diag.cpp
tests/dnl/: CMakeLists.txt  dnl.cpp
tests/dump/: console.h
tests/hola/: README.md
tests/knob/: CMakeLists.txt  knob.cpp
tests/luz/: CMakeLists.txt  README.md  luz.cpp
weas/: LICENSE  README.md  ui-notes.txt
weas/include/weas/: cc.h  codec.h  codec.h-hidden  cv.h  debug.h  eeprom.h  fifo.h  knobs.h  led.h  leds.h  leds_buffer.h  leds_direct.h  leds_mask.h  leds_timer.h  ui_iface.h  ui_state.h  weas.h
weas/src/: AudioBuffer.cpp  CMakeLists.txt  codec.cpp  debug.cpp  eeprom.cpp  fifo.cpp  knobs.cpp  led.cpp  leds.cpp  leds_buffer.cpp  leds_direct.cpp  leds_mask.cpp  leds_timer.cpp  ui_state.cpp
xqrias/: CMakeLists.txt
xqrias/src/: CMakeLists.txt  xqrias.cpp
